Testing white space fix

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,6 +11,10 @@ div, p, a, li, td{
   -webkit-text-size-adjust: none
 }
 
+@media screen and (max-width: 767px) {
+main { padding-top: 30px !important; }
+}
+
 .body{
   margin: 0;
   padding: 0;
